2009-09-03  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_format (const Complex&, int&, int&)):
	Avoid passing NaN or Inf to log10.

2008-09-01  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/eig.cc (Feigs): Correct nesting error in option
	parsing that prevented the use of a function for generalized
	eigenvalue problems.

2009-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (get_current_method_class): Check before slicing.

2009-08-26  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Ffmod): Reverse order of args.

2009-08-26  Rob Mahurin  <rob@utk.edu>

	* syscalls.cc: Recommend waitpid() in popen2() documentation.
	
2009-08-25  John W. Eaton  <jwe@octave.org>

	* graphics.cc (gnuplot_backend::send_quit): Wait for gnuplot process.

2009-08-12  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fissorted, F__sort_rows_idx__, Fnorm): Mark as Built-in
	Functions in the inline help.

2009-08-10  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Perform tilde expansion on
	filename argument.

2009-06-11  John W. Eaton  <jwe@octave.org>

	* display.h (display_info::no_window_system): New static function.
	(display_info::display_info, display_info::init,
	display_info::instance_ok): New argument, QUERY.
	(display_info::init): Skip query if QUERY is false.

	* octave.cc (long_opts, octave_main): Handle --no-window-system option.
	(NO_WINDOW_SYSTEM_OPTION): New defined value.
	(usage_string, verbose_usage): Mention --no-window-system option.

2009-08-09  John W. Eaton  <jwe@octave.org>

	* parse.y (Fevalin): Also return output from CATCH expression.

2009-08-06  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-dm-template.cc, OPERATORS/op-pm-template.cc:
	Also define conversions for null string and null sq_string.

2009-08-06  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-cdm-m.cc, OPERATORS/op-dm-m.cc, OPERATORS/op-pm-m.cc:
	Define LDMATRIX and DEFINENULLASSIGNCONV.