@@ -1,3 +1,7 @@
+2009-09-08  Rafael Laboissiere  <rafael@debian.org>
+
+	* pr-output.cc: New test.
+
 2009-09-03  John W. Eaton  <jwe@octave.org>
 
 	* pr-output.cc (set_format (const Complex&, int&, int&)):
